# probable-guide

./: .gitignore  CMakeLists.txt  README.md
docs/: basics.md  libraries.md  redo-undo.md  rendering.md  requirements_doc.md  use-case.md  widget.md  window.md
include/probable_guide/: iwidget.h  point.h  probable_guide.h  rect.h  vulkan_context.h  window.h
src/: main.cpp  probable_guide.cpp  vulkan_context.cpp  window.cpp
